--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <script src='https://api.mapbox.com/mapbox.js/v3.1.1/mapbox.js'></script>
     <link href='https://api.mapbox.com/mapbox.js/v3.1.1/mapbox.css' rel='stylesheet' />
     <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
-    <!-- <script src='https://api.mapbox.com/mapbox.js/plugins/arc.js/v0.1.0/arc.js'></script>
-    <script src='https://npmcdn.com/@turf/turf@3.5.1/turf.min.js'></script> -->
     <script src="Leaflet.Geodesic.js"></script>
 
 
@@ -35,7 +33,7 @@
     <script src='https://code.jquery.com/jquery-1.11.0.min.js'></script>
     <script>
         L.mapbox.accessToken = 'pk.eyJ1IjoibHVrZXRlY2giLCJhIjoiY2plOHVlOGJlMGZoazJxbGV2dzVpN29pZCJ9.gRAKacJQxFOUFsllGTHuew';
-        var map = L.mapbox.map('map', 'mapbox.streets')
+        var map = L.mapbox.map('map', 'mapbox.dark')
         var code = "1KKcO6Ui0dUsgmnkTqn8csgjbDFXkCAdatKAKa7QZkkU"
 
         var fg = L.featureGroup().addTo(map);
