--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
                     var geodesic = L.geodesic([[origin, orleans]], {
                         weight: 0.8,
+                        color: '#3b96f1',
                         opacity: 1,
                         steps: 50
                     }).addTo(fg).addTo(map);
