added lat/long for convention center

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         var code = "1KKcO6Ui0dUsgmnkTqn8csgjbDFXkCAdatKAKa7QZkkU"
 
         var fg = L.featureGroup().addTo(map);
-        var orleans = new L.LatLng(30.053206, -89.934873);
+        var orleans = new L.LatLng(29.941514, -90.063567);
         var origin;
         Tabletop.init({
             key: code,
@@ -49,10 +49,10 @@
                         .bindPopup(place.City)
                     origin = L.latLng(place.lat, place.lon);
 
-                    console.log('var ' + place.Name + ' = [' + origin.lat + ', ' + origin.lng + '];');
+                    //console.log('var ' + place.Name + ' = [' + origin.lat + ', ' + origin.lng + '];');
 
                     var geodesic = L.geodesic([[origin, orleans]], {
-                        weight: 0.8,
+                        weight: 1.5,
                         color: '#3b96f1',
                         opacity: 1,
                         steps: 50
